--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dompurify": "^3.0.6",
     "firebase": "^10.6.0",
     "next": "14.0.3",
+    "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
