--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,11 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "hosting": {
+      "port": 5000,
+      "host": "0.0.0.0"
+    }
   }
 }
