--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "browser-image-compression": "^2.0.2",
+    "cloudinary-react": "^1.8.1",
     "dompurify": "^3.0.6",
     "firebase": "^10.6.0",
+    "image-compressor": "^2.0.3",
     "next": "14.0.3",
+    "quill": "^1.3.7",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
