--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
