--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
-    "react-quilljs": "^1.3.3"
+    "react-quilljs": "^1.3.3",
+    "reading-time": "^1.5.0",
+    "reading-time-estimator": "^1.9.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
