--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
     "react-quilljs": "^1.3.3",
+    "react-router-dom": "^6.21.2",
     "reading-time": "^1.5.0",
     "reading-time-estimator": "^1.9.2"
   },
