--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "dompurify": "^3.0.6",
     "firebase": "^10.6.0",
     "image-compressor": "^2.0.3",
-    "next": "14.0.3",
+    "next": "^14.0.3",
     "quill": "^1.3.7",
     "quill-image-uploader": "^1.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
     "react-quilljs": "^1.3.3",
